--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "gulp-notify": "^2.2.0",
     "gulp-uglify": "^1.2.0",
     "run-sequence": "^1.1.2",
-    "vinyl-fs": "^1.0.0"
+    "vinyl-fs": "^1.0.0",
+    "vinyl-ftp": "^0.5.0"
   },
   "moduleType": [],
   "keywords": [],
