--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-minify-html": "^1.0.5",
     "gulp-notify": "^2.2.0",
     "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.7",
     "run-sequence": "^1.1.2",
     "vinyl-fs": "^1.0.0",
     "vinyl-ftp": "^0.5.0"
